# rtcom-accounts-plugin-matrix

./: AUTHORS  configure.ac
data/: Makefile.am  matrix-advanced.glade
debian/: changelog  control  install
src/: Makefile.am  matrix-plugin.c
